Option to disable/add comms, remove scanning from graph searcher